--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,7 @@ img {
     width: 4.3rem;
     height:1.2rem;
 	margin:0.5rem 0.5rem;
-    background: url(../images/logo.png) no-repeat 0 0;
+    background: url(https://ae01.alicdn.com/kf/H6e2446fbd4944e64921a2441c84ab7060.png) no-repeat 0 0;
     background-size: 4.3rem 1.2rem;	
 }
 .header-bar-nav {
