--- a/css/main.css
+++ b/css/main.css
@@ -1134,7 +1134,7 @@ lasted-list .lasted-num,.lasted-list .lasted-tags,.lasted-list .lasted-time,.las
     background:#000;
     width:100%;
     height:220px;
-    background:#000  url(../images/movie.gif) center center;
+    background:#000  url() center center;
     background-size:100% 220px;	
 }
 .mplayer .show-copyright{
